scss/partials/_stream_item.scss
div.stream-item {
  width: #{$board_container_width}px;
  margin: 12px 0px 16px;
  border: 1px solid #ECECEC;
  border-radius: 6px;
  padding: 32px 40px;
  background-color: white;

  @include mobile() {
    width: 100%;
  }

  &:hover {
    div.stream-item-header {
      div.tile-menu {
        display: block;
      }
    }
  }

  &.show-continue-reading {
    div.stream-item-body {
      div.stream-body-left {
        div.stream-item-footer {
          button.expand-button {
            display: block;
          }
        }
      }
    }
  }

  div.stream-item-header {

    div.tile-menu {
      display: none;
      margin-top: -8px;
      margin-right: -10px;
    }

    div.stream-header-head-author {
      float: left;
      width: 55%;
      overflow: hidden;

      @include activity-author(32);
    }

    @include section-tag();
  }

  div.stream-item-body {
    padding: 0px;
    border-radius: 6px;

    @include mobile() {
      display: block;
    }

    div.stream-body-left {
      position: relative;
      margin-top: 8px;

      @include mobile() {
        width: 100%;
        margin: 8px 0px 0px;
      }

      div.stream-attachments {
        @include mobile() {
          position: relative;
          bottom: unset;
        }
      }

      div.stream-item-headline {
        @include activity-title();
        @include avenir_H();
        font-size: 22px;
        color: $deep_navy;
        line-height: 28px;
        
        @include mobile() {
          margin-top: 16px;
        }
      }

      div.stream-item-body-container {

        div.stream-item-body {
          div.stream-item-body-inner {
            margin-top: 8px;
            @include activity-body(16, 22, 22, $ui_grey);
            @include avenir_R();
            color: $ui_grey;
            line-height: 22px;

            &>*:first-child {
              margin-top: 0px;
            }

            div.carrot-no-preview, a.carrot-no-preview {
              display: none;
            }
          }
        }
      }

      div.stream-mobile-comments {
        background-color: #FDFCFB;

        @include mobile() {
          background-color: transparent;
        }

        div.stream-comments-title {
          @include avenir_H();
          font-size: 14px;
          color: $carrot_dark_gray;
          margin-bottom: 16px;

          @include mobile() {
            display: none;
          }
        }
      }

      div.stream-mobile-comments-summary {
        margin-top: 16px;
        border-top: 1px solid #ECECEC;
        padding-top: 16px;
        position: relative;

        &:after {
          content: "";
          position: absolute;
          width: 9px;
          height: 15px;
          top: 20px;
          right: 0px;
          background-image: cdnUrl("/img/ML/mobile_comments_chevron.svg");
          background-size: 9px 15px;
          background-position: center;
          background-repeat: no-repeat;
        }
      }

      div.stream-item-footer {
        height: 32px;
        margin-top: 32px;

        div.stream-item-comments-summary {
          margin-right: 16px;
          margin-top: 4px;
          float: right;
          cursor: pointer;
        }

        div.reactions {
          float: right;
          margin-top: 4px;
        }

        @include mobile() {
          position: relative;
          bottom: unset;

          div.reactions {
            float: left;
          }
        }

        button.expand-button {
          width: 134px;
          height: 24px;
          color: $carrot_green;
          @include avenir_H();
          font-size: 16px;
          text-align: left;
          display: none;
          padding: 6px 7px 0px 22px;
          position: relative;
          overflow: visible;
          float: left;

          @include preload_image(cdnUrl("/img/ML/keep_reading_chevron_up_grey.svg"));

          &:before {
            position: absolute;
            content: "";
            background-image: cdnUrl("/img/ML/keep_reading_chevron.svg");
            background-size: 14px 8px;
            background-position: center;
            background-repeat: no-repeat;
            width: 14px;
            height: 8px;
            top: 13px;
            left: 0px;
            transition: rotate 180ms;
          }

          &.expanded {
            color: $ui_grey;
            &:before {
              background-image: cdnUrl("/img/ML/keep_reading_chevron_up_grey.svg");
            }
          }
        }
      }
    }

    div.stream-body-right {
      position: relative;
      margin-top: 24px;

      div.stream-body-comments {
        height: 100%;

        div.stream-comments-title {
          @include avenir_H();
          font-size: 14px;
          color: $carrot_dark_gray;
          margin-bottom: 8px;
        }
      }
    }
  }
}

